examples/avr_usart/evaluation/without_constraints/avr_usart_write/test000001.kquery
array value[8] : w32 -> w8 = symbolic
(query [(Eq false
             (Ult (ReadLSB w64 0 value)
                  256))]
        false)
